src/main/java/com/example/goodToKnow/errors/BuildingNotFoundException.java
package com.example.goodToKnow.errors;

public class BuildingNotFoundException extends RuntimeException {
  public BuildingNotFoundException() {
    super("Building not found");
  }
}
